--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,24 +14,39 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Asm2_AD_Team1"
         tools:targetApi="31">
-
-        <!-- Declare MainActivity here -->
+        <activity
+            android:name=".StatisticsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ExpenseDao"
+            android:exported="false" />
+        <activity
+            android:name=".ExpenseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ExpenseDatabase"
+            android:exported="false" />
+        <activity
+            android:name=".ExpenseAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".Expense"
+            android:exported="false" /> <!-- Declare MainActivity here -->
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
-
-        <!-- Existing activities -->
+            android:exported="false" /> <!-- Existing activities -->
         <activity
             android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Register"
             android:exported="false" />
     </application>
+
 </manifest>
