--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity
             android:name=".Register"
             android:exported="false" />
+        <activity android:name=".AddRecurringExpenseActivity" />
+
     </application>
 
 </manifest>
