--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:theme="@style/Theme.Asm2_AD_Team1"
         tools:targetApi="31">
         <activity
-            android:name=".AddExpenseActivity"
+            android:name=".ExpenseSetting"
             android:exported="false" />
+
         <activity
             android:name=".BudgetSetting"
             android:exported="false" />
