--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.Asm2_AD_Team1"
         tools:targetApi="31">
         <activity
+            android:name=".RecurringExpenseManager"
+            android:exported="false" />
+        <activity
+            android:name=".ExpenseSetting"
+            android:exported="false" />
+        <activity
+            android:name=".AddExpenseActivity"
+            android:exported="false" />
+        <activity
             android:name=".BudgetSetting"
             android:exported="false" />
         <activity
@@ -32,8 +41,6 @@
         <activity
             android:name=".Register"
             android:exported="false" />
-        <activity android:name=".AddRecurringExpenseActivity" />
-
     </application>
 
 </manifest>
