--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,8 +17,12 @@
         android:theme="@style/Theme.Asm2_AD_Team1"
         tools:targetApi="31">
         <activity
-            android:name=".AddExpenseActivity"
+            android:name=".RecurringExpenseManager"
             android:exported="false" />
+        <activity
+            android:name=".ExpenseSetting"
+            android:exported="false" />
+
         <activity
             android:name=".BudgetSetting"
             android:exported="false" />
