--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 01 18:05:00 ICT 2025
-sdk.dir=C\:\\Users\\ADMIN\\AppData\\Local\\Android\\Sdk
+#Wed Apr 02 09:39:32 ICT 2025
+sdk.dir=C\:\\Users\\clone\\AppData\\Local\\Android\\Sdk
