--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -17,13 +16,14 @@
         android:theme="@style/Theme.Asm2_AD_Team1"
         tools:targetApi="31">
         <activity
+            android:name=".AdminDashboardActivity"
+            android:exported="true" />
+        <activity
             android:name=".RecurringExpenseManager"
             android:exported="false" />
         <activity
             android:name=".ExpenseSetting"
             android:exported="false" />
-        
-
         <activity
             android:name=".BudgetSetting"
             android:exported="false" />
