--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -15,10 +16,13 @@
         android:theme="@style/Theme.Asm2_AD_Team1"
         tools:targetApi="31">
         <activity
-            android:name=".ExpenseSetting"
+            android:name=".AdminDashboardActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RecurringExpenseManager"
             android:exported="false" />
         <activity
-            android:name=".AddExpenseActivity"
+            android:name=".ExpenseSetting"
             android:exported="false" />
         <activity
             android:name=".BudgetSetting"
